# meta-magic_mount-rs

./: Cargo.toml
docs/: README.md  README_en.md  README_ru.md
module/: config.toml  config_apatch.toml
src/: config.rs  defs.rs  main.rs
src/magic_mount/: mod.rs
src/utils/ksucalls/: try_umount.rs
webui/: eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js
webui/src/: types.ts
webui/src/components/: BottomActions.css
webui/src/lib/: api.mock.ts  api.ts  constants.ts
webui/src/locales/: en.json  ru.json  zh.json
webui/src/routes/: ConfigTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.tsx
