[workspace]
members = ["xtask"]

[package]
name = "magic_mount_rs"
version = "2.2.4"
edition = "2024"
description = "An implementation of a metamodule using Magic Mount, Based on MKSU, Template is from meta-overlay."
authors = ["mmrs developers"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/meta-magic_mount-rs/"

[package.metadata.magic_mount_rs]
name = "Magic Mount-rs"
update = "https://github.com/Tools-cx-app/meta-magic_mount-rs/raw/master/update/update.json"

[dependencies]
anyhow = "1"
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
regex-lite = "0.1.9"
fastrand = "2.3.0"

[build-dependencies]
anyhow = "1.0.102"
toml = "1.0.3"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.9"
